--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
+    "build": "vite build",
     "start": "cross-env NODE_ENV=production tsx server/index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
@@ -67,12 +68,13 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "ws": "^8.18.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "vite": "^7.1.9",
+    "@vitejs/plugin-react": "^5.0.4"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
     "tsx": "^4.20.5",
-    "typescript": "5.6.3",
-    "vite": "^7.1.9"
+    "typescript": "5.6.3"
   }
 }
