--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.39.3",
-    "drizzle-zod": "^0.7.0",
+    "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.6.0",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "framer-motion": "^12.23.24",
+    "express": "^4.22.1",
+    "express-session": "^1.18.2",
+    "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
@@ -65,10 +66,13 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
-    "postgres": "^3.4.5",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "postgres": "^3.4.7",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "vite": "^7.1.9",
+    "wouter": "^3.8.1",
     "ws": "^8.18.0",
     "zod": "^3.25.76"
   },
