Fix Node ESM compatibility and add comprehensive testing
- Add .js extensions to all relative imports for Node ESM
- Replace @shared/* imports with relative paths
- Fix __dirname usage with fileURLToPath pattern
- Add Jest + Supertest test suite for all API endpoints
- Add stress testing with autocannon
- Update TypeScript configs for proper compilation
- Add proper database cleanup in tests
- Ignore test files and env files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,10 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
-.env
+.env*
+build/
+tests/
+*.test.ts
+*.test.js
+jest.config.js
+scripts/stress-test.js
