--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "vite build",
-    "vercel-build": "npm run build",
-    "start": "cross-env NODE_ENV=production tsx server/index.ts",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "build:client": "vite build",
+    "build:server": "tsc -p tsconfig.server.json",
+    "build": "npm run build:client && npm run build:server",
+    "start": "node build/index.js",
+    "check": "tsc --noEmit",
+    "db:push": "drizzle-kit push",
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
+    "test:auth": "set NODE_OPTIONS=--experimental-vm-modules && jest tests/auth.test.ts",
+    "test:orders": "set NODE_OPTIONS=--experimental-vm-modules && jest tests/orders.test.ts",
+    "test:users": "set NODE_OPTIONS=--experimental-vm-modules && jest tests/users.test.ts",
+    "test:order-items": "set NODE_OPTIONS=--experimental-vm-modules && jest tests/order-items.test.ts",
+    "test:api": "set NODE_OPTIONS=--experimental-vm-modules && jest tests/api.test.ts --detectOpenHandles",
+    "stress": "node scripts/stress-test.js"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -43,6 +51,10 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.60.5",
+    "@types/express": "^5.0.6",
+    "@types/express-session": "^1.18.2",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.17",
     "better-sqlite3": "^12.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -74,18 +86,28 @@
     "vite": "^7.1.9",
     "wouter": "^3.8.1",
     "ws": "^8.18.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zod-validation-error": "^5.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "@replit/vite-plugin-cartographer": "^0.4.4",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.4",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.2",
+    "@types/supertest": "^6.0.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "autocannon": "^8.0.0",
     "autoprefixer": "^10.4.23",
     "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
     "postcss": "^8.5.6",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4.1.18",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.20.5",
     "typescript": "5.6.3"
   }
